# multi_agent_crew_automation_for_code_quality_improvement

./: .gitignore  README.md  pyproject.toml  requirements.txt
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
.trunk/plugins/: trunk
db/: chroma.sqlite3
src/: example_math_representation.py  math_tools2.py
src/algorithms/: aware_factorization_machines.py  bayesian_optimization.py  conditional_random_fields.py  extreme_learning_machines.py  hopfield_network.py  iforest.py  mycorrhizal.py  random_kitchen_sinks.py  self_organizing_maps.py  symbolic_regression.py  tsetlin.py
src/examples/: pattern_matching_example.py
src/multi_agent_crew_automation_for_code_quality_improvement/: algorithm_tools.py  crew.py  main.py  math_tools.py
src/multi_agent_crew_automation_for_code_quality_improvement/config/: agents.yaml  tasks.yaml
src/multi_agent_crew_automation_for_code_quality_improvement/tools/: custom_tool.py
